Java-Prettier integration